info icon added and spacing fixed

--- a/assets/scss/_index.scss
+++ b/assets/scss/_index.scss
@@ -37,6 +37,10 @@
 	.resume:hover {
 		color: $resume;
 	}
+
+	.information:hover {
+		color: white;
+	}
 }
 
 .blog {
